# fastapi-fast-template

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
fastapi_fast_template/: cli.py  content.py
fastapi_fast_template/actions/: base.py  doc.py  extension.py  main.py
fastapi_fast_template/contents/: ruff.toml
fastapi_fast_template/contents/configs/: config.py  single_config.py
fastapi_fast_template/contents/database/: database_dynamic_config.py  sqlalchemy.py  tortoise.py
fastapi_fast_template/contents/envs/: .env.sample
fastapi_fast_template/contents/git/: .gitignore
fastapi_fast_template/contents/main/: app.py  main.py  stream.py
fastapi_fast_template/contents/odm/: beanie.py
fastapi_fast_template/contents/orm/: sqlalchemy.py  sqlmodel.py
fastapi_fast_template/contents/repositories/beanie/: base.py
fastapi_fast_template/contents/repositories/sqlalchemy/: base.py
fastapi_fast_template/contents/repositories/sqlmodel/: base.py
fastapi_fast_template/contents/repositories/tortoise/: base.py
fastapi_fast_template/contents/repository/sqlalchemy/: base.py
fastapi_fast_template/contents/routers/: base.py
fastapi_fast_template/contents/tasks/: __init__.py
fastapi_fast_template/contents/tests/: conftest.py
fastapi_fast_template/contents/utils/: authx.py  lifespan.py  stream_lifespan.py
fastapi_fast_template/contents/utils/caching/: redis_cache.py
fastapi_fast_template/utils/: enums.py  helpers.py
src/: cli.py  content.py
src/contents/configs/: config.py  single_config.py
src/contents/database/: database_dynamic_config.py  sqlalchemy.py
src/contents/envs/: .env.sample
src/contents/main/: app.py
src/utils/: enums.py  helpers.py
