[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi_fast_template"
description = "This library helps you not get involved in the complexities of FastAPI and its libraries and focus all your attention on the application."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Saeid Noormohammadi", email = "heysaeid92@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/heysaeid/fastapi-fast-template"
Documentation = "https://github.com/heysaeid/fastapi-fast-template"
Repository = "https://github.com/heysaeid/fastapi-fast-template"

[tool.hatch.version]
path = "fastapi_fast_template/__init__.py"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
parallel = true


[project.scripts]
fast = "fastapi_fast_template.cli:Cli.main"