[metadata]
name = fastapi fast template
version = 0.0.1
url = https://github.com/heysaeid/fastapi-fast-template
license = MIT license
author = Saeid Noormohammadi
author_email = heysaeid92@gmail.com
maintainer = Saeid Noormohammadi
maintainer_email = heysaeid92@gmail.com
description = This library helps you not get involved in the complexities of FastAPI and its libraries and focus all your attention on the application..

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    fast = src.cli:Cli.main


[mypy]
include_package_data = True
python_requires = >= 3.8
no_implicit_optional = True
local_partial_types = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True